WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274951
Legacy attachment icon is not updated when type or title attribute is changed.
https://bugs.webkit.org/show_bug.cgi?id=274951
Summary
Legacy attachment icon is not updated when type or title attribute is changed.
Gerald Squelart
Reported
2024-05-30 22:51:01 PDT
This may cause the wrong icon to be shown if the legacy (non-wide) attachment is first created with one type, then later changed to another one.
rdar://128175175
Attachments
Add attachment
proposed patch, testcase, etc.
Gerald Squelart
Comment 1
2024-05-31 05:14:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29371
EWS
Comment 2
2024-06-01 15:39:41 PDT
Committed
279620@main
(8852bc5adfdb): <
https://commits.webkit.org/279620@main
> Reviewed commits have been landed. Closing PR #29371 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug